# wordle-rs

./: .gitignore  Cargo.toml
assets/: dictionary_reduced.txt
src/: anim.rs  components.rs  events.rs  keyboard.rs  main.rs  util.rs
